--- a/_layouts/investment-project.html
+++ b/_layouts/investment-project.html
@@ -3,7 +3,9 @@ layout: default
 ---
 
 <section class="banner grid-center" style="background-image:url({{page.banner}}">
-  <h2 class="col-6-middle centered"> {{page.heading}} </h2>
+  <h1 class="col-8-middle centered big-bold"> {{page.heading}} </h1>
+</section>
+<section class="grid-center light-bg padded">
   <p class="col-8-middle centered"> {{page.paragraph}} </p>
 </section>
   <section class="padded centered">
