--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -103,7 +103,7 @@
     <a class="logo" href="/index">
       <img src="/images/jsib-logo.png" alt="">
     </a>
-    <p> We are an Authorised Financial Services Provider <br>License No. 14396 </p>
+    <p> We are a licensed construction company <br> CSLB# 784180 </p>
   </div>
   <div class="col-1 sm-hidden"> <!-- empty filler --> </div>
 
@@ -134,9 +134,9 @@
     <h3> Connect </h3>
     <nav>
       <a href="/index#map"> 19 Mill Road, Hillcrest </a>
-      <a href="tel:+27317651080"> +27 (31) 765 1080 </a>
-      <a href="https://www.facebook.com/JSib.brokers" target="_blank"> Facebook </a>
-      <a href="https://www.facebook.com/JSib.brokers" target="_blank"> Email Add</a>
+      <a href="tel:+18187907437"> +1 818 790 7437 </a>
+        <a href="tel:+3234221916"> +1 323 422 1916</a>
+      <a href="https://www.facebook.com/JSib.brokers" target="_blank"> contact@vistaenterpriseinc.com</a>
     </nav>
   </div>
 </footer>
