--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -125,7 +125,7 @@
     <h3> Explore </h3>
     <nav>
       <a href="/projects"> Projects </a>
-      <a href="/investment-center"> Inventment Center </a>
+      <a href="/investment-center"> Investment Center </a>
       <a href="/index#about"> About </a>
       <a href="/index#teams"> Meet our Team </a>
     </nav>
