--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
   <header class="grid fixed">
     <div class="logo col-4-middle">
       <a class="logo" href="/index">
-        <img src="/images/jsib-logo.png" alt="">
+        <img src="/images/logo.png" alt="">
       </a>
     </div>
     <nav class="col-8-middle_sm-hidden right">
@@ -81,7 +81,7 @@
 
       <div class='grid-center mob-logo page-nav mobile-menu'>
         <a class="mob-logo" href="/index">
-          <img src="/images/jsib-logo.png" alt="">
+          <img src="/images/logo.png" alt="">
         </a>
         <p class="cross exit right">╳</p>
           <a href="/index#about"> about </a>
@@ -103,7 +103,7 @@
   <!-- column -->
   <div class="col-3_sm-12 padded-1">
     <a class="logo" href="/index">
-      <img src="/images/jsib-logo.png" alt="">
+      <img src="/images/logo.png" alt="">
     </a>
     <p> We are a licensed construction company operating in The USA <br> CSLB# 784180 </p>
   </div>
