--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
     <!-- Meta data for SEO purposes. -->
     <title> {{page.title}} </title>
-    <meta name="description" content="{{page.meta-description}}">
+    <meta name="description" content="{{page.meta-site-description}}">
     <meta name="keywords" content="hillside ">
 
     <!-- meta data to tell the browser that your devide is responsive -->
@@ -18,12 +18,12 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
     <!--  Social media sharing META Tags -->
-    <meta property="og:title" content="{{page.title}}">
-    <meta property="og:description" content="{{page.meta-description}}">
+    <meta property="og:title" content="{{page.twitter-title}}">
+    <meta property="og:description" content="{{page.meta-social-description}}">
     <meta property="og:image" content="{{page.featured-image_path}}">
     <meta property="og:url" content="{{page.url}}">
-    <meta name="twitter:card" content="{{page.meta-description}}">
-    <meta name="og:site_name" content="JSib | Brokers in Durban">
+    <meta name="twitter:card" content="{{page.meta-twitter-description}}">
+    <meta name="og:site_name" content="Vista Enterprise, Inc | Full-service Construction and Development Company">
 
 
 
