--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -1,11 +1,10 @@
 ---
 layout: default
 ---
-<section class="grid-center padded photography-page capped-width padded-top">
-  <div class="grid-center light-bg">
-      <div class="col-6_xs-12 padded-05">
+<section class="grid-center light-bg photography-page capped-width padded-top">
+  <div class="grid-center ">
+      <div class="col-12_xs-12 padded-05 centered">
         <h4 class="centered padded-top"> {{page.project-name}}</h4>
-        <p class="padded-05">{{page.main-paragraph}}</p>
       </div>
       <div class="col-6-middle_xs-12 centered padded-05">
         <h1>{{page.location}}</h1>
