--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <section class="grid-center light-bg photography-page capped-width padded-top">
-  <div class="grid-center ">
+  <div class="grid-center padded-top ">
       <div class="col-12_xs-12 padded-05 centered">
         <h4 class="centered padded-top"> {{page.project-name}}</h4>
       </div>
