--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,7 +64,7 @@
   <header class="grid fixed">
     <div class="logo col-3_sm-8-middle">
       <a class="logo" href="/index">
-        <img src="/images/vista-logo3.png" alt="">
+        <img src="/images/vista-logo5.png" alt="">
       </a>
     </div>
     <nav class="col-9-middle_sm-hidden right">
@@ -149,7 +149,7 @@
 </footer>
 <div class="col-12 centered sub-footer blue-bg">
   <p class="small-font "> <a href="https://kingcode.uk/" target="_blank"> Website by King Code </a>
-   <a href="https://www.vistaenterpriseinc.com/"> © vistaenterpriseinc.com </a> <a href ="mailto:contact@vistaenterpriseinc.com"> contact@vistaenterpriseinc.com</a></p>
+   <a href="https://www.vistaenterpriseinc.com/"> © vistaenterpriseinc.com </a> <a href="mailto:vistaenterpriseinc@yahoo.com"> vistaenterpriseinc@yahoo.com</a>
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
