--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -6,7 +6,7 @@ layout: default
       <div class="col-12_xs-12 padded-05 centered">
         <h4 class="centered padded-top"> {{page.project-name}}</h4>
       </div>
-      <div class="col-6-middle_xs-12 centered padded-05">
+      <div class="col-12 centered padded-05">
         <h1>{{page.location}}</h1>
       </div>
   </div>
