--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,7 @@
         <img src="/images/vista-logo5.png" alt="vista Enterprise logo logo for construction company in LA, CA">
       </a>
     </div>
-    <nav class="col-9-middle_sm-hidden right">
+    <nav class="col-9-middle_sm-hidden right editable">
       <a href="/#about"> about </a>
       <a href="/#services"> services </a>
       <a href="/#story"> our story </a>
@@ -82,7 +82,7 @@
         <a class="mob-logo" href="/">
           <img src="/images/vista-logo5.png" alt="vista Enterprise logo logo for construction company in LA, CA">
         </a>
-        <p class="cross exit right">╳</p>
+        <p class="cross exit right editable">╳</p>
           <a class="exit" href="/#about"> about </a>
           <a class="exit" href="/#services"> services </a>
           <a class="exit" href="/#story"> our story </a>
@@ -101,14 +101,14 @@
 <footer class="grid-bottom padded-sides">
   <!-- column -->
   <div class="col-3_sm-12 padded-1">
-    <a class="logo" href="/">
+    <a class="logo editable" href="/">
       <img src="/images/vista-logo5.png" alt="vista Enterprise logo logo for construction company in LA, CA">
     </a>
-    <p> We are a licensed construction company operating in The USA <br> CSLB# 784180 </p>
+    <p class="editable"> We are a licensed construction company operating in The USA <br> CSLB# 784180 </p>
   </div>
 
   <!-- column -->
-  <div class="col-3_sm-4_xs-12 padded-1">
+  <div class="col-3_sm-4_xs-12 padded-1 editable">
     <h3> Projects </h3>
     <nav>
       <a href="/projects"> Recent Projects</a>
@@ -119,7 +119,7 @@
   </div>
 
   <!-- column -->
-  <div class="col-3_sm-4_xs-12 padded-1">
+  <div class="col-3_sm-4_xs-12 padded-1 editable">
     <h3> Explore </h3>
     <nav>
       <a href="/#services"> Services </a>
@@ -130,7 +130,7 @@
   </div>
 
   <!-- column -->
-  <div class="col-3_sm-4_xs-12 padded-1">
+  <div class="col-3_sm-4_xs-12 padded-1 editable">
     <h3> Connect </h3>
     <nav>
       <a href="mailto:vistaenterpriseinc@yahoo.com"> vistaenterpriseinc@yahoo.com</a>
