--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@
 
   <header class="grid fixed">
     <div class="logo col-3_sm-8-middle">
-      <a class="logo" href="/">
+      <a class="logo editable" href="/">
         <img src="/images/vista-logo5.png" alt="vista Enterprise logo logo for construction company in LA, CA">
       </a>
     </div>
