--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -141,8 +141,8 @@
   </div>
 </footer>
 <div class="col-12 centered sub-footer blue-bg">
-  <p class="small-font "> <a href="https://kingcode.uk/" target="_blank"> Website by King Code </a>
-   <a href="https://www.vistaenterpriseinc.com/"> © vistaenterpriseinc.com </a> <a href="mailto:vistaenterpriseinc@yahoo.com"> vistaenterpriseinc@yahoo.com</a>
+  <p class="small-font "> <a href="https://kingcode.uk/" target="_blank"> website by King Code </a>
+   <a href="https://www.vistaenterpriseinc.us/"> © vistaenterpriseinc.us </a> <a href='mailto:vistaenterpriseinc@yahoo.com'> vistaenterpriseinc@yahoo.com</a>
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
