--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <section class="grid-center light-bg photography-page capped-width padded-top">
-  <div class="grid-center padded-top ">
+  <div class="grid-center padded-top-projects ">
       <div class="col-12 centered padded-05">
         <h1>{{page.location}}</h1>
       </div>
