--- a/_layouts/investment-project.html
+++ b/_layouts/investment-project.html
@@ -4,8 +4,8 @@ layout: default
 
 <section class="banner grid-center" style="background-image:url({{page.banner}}">
   <div class="col-8-middle centered">
-    <h1 class="big-bold"> {{page.heading}} </h1>
-    <a href="{{page.button-link}}" class= "button-solid"> {{page.button}}</a>
+    <h1 class="big-bold editable"> {{page.heading}} </h1>
+    <a href="{{page.button-link}}" class= "button-solid editable"> {{page.button}}</a>
   </div>
 </section>
 
