--- a/_layouts/investment-project.html
+++ b/_layouts/investment-project.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<section class="banner grid-center" style="background-image:url({{page.banner}}">
+<section class="banner grid-center" style="background-image:url({{page.banner_image}}">
   <div class="col-8-middle centered">
     <h1 class="big-bold editable"> {{page.heading}} </h1>
     <a href="{{page.button-link}}" class= "button-solid editable"> {{page.button}}</a>
