--- a/_layouts/investment-project.html
+++ b/_layouts/investment-project.html
@@ -15,7 +15,7 @@ layout: default
     <div class="grid padded-1">
       <div class="col-4_sm-6 padded-1">
         <a href="{{page.link-1}}">
-          <div class="hover-container" style="background-image:url('{{page.1_photo}}')">
+          <div class="hover-container" style="background-image:url('{{page.photo-1_image}}')">
             <div class="hover-overlay">
               <div class="hover-inner">
                 <h3> {{page.title-1}}</h3>
