--- a/_layouts/investment-project.html
+++ b/_layouts/investment-project.html
@@ -27,7 +27,7 @@ layout: default
       </div>
       <div class="col-4_sm-6 padded-1">
         <a href="{{page.link-2}}">
-          <div class="hover-container" style="background-image:url('{{page.photo-2}}')">
+          <div class="hover-container" style="background-image:url('{{page.photo-2_image}}')">
             <div class="hover-overlay">
               <div class="hover-inner">
                 <h3>{{page.title-2}}</h3>
@@ -39,7 +39,7 @@ layout: default
       </div>
       <div class="col-4_sm-6 padded-1">
         <a href="{{page.link-3}}">
-          <div class="hover-container" style="background-image:url('{{page.photo-3}}')">
+          <div class="hover-container" style="background-image:url('{{page.photo-3_image}}')">
             <div class="hover-overlay">
               <div class="hover-inner">
                 <h3>{{page.title-3}}</h3>
@@ -51,7 +51,7 @@ layout: default
       </div>
       <div class="col-4_sm-6 padded-1">
         <a href="{{page.link-4}}">
-          <div class="hover-container" style="background-image:url('{{page.photo-4}}')">
+          <div class="hover-container" style="background-image:url('{{page.photo-4_image}}')">
             <div class="hover-overlay">
               <div class="hover-inner">
                 <h3>{{page.title-4}}</h3>
@@ -63,7 +63,7 @@ layout: default
       </div>
       <div class="col-4_sm-6 padded-1">
         <a href="{{page.link-5}}">
-          <div class="hover-container" style="background-image:url('{{page.photo-5}}')">
+          <div class="hover-container" style="background-image:url('{{page.photo-5_image}}')">
             <div class="hover-overlay">
               <div class="hover-inner">
                 <h3>{{page.title-5}}</h3>
@@ -75,7 +75,7 @@ layout: default
       </div>
       <div class="col-4_sm-6 padded-1">
         <a href="{{page.link-6}}">
-          <div class="hover-container" style="background-image:url('{{page.photo-6}}')">
+          <div class="hover-container" style="background-image:url('{{page.photo-6_image}}')">
             <div class="hover-overlay">
               <div class="hover-inner">
                 <h3>{{page.title-6}}</h3>
