--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -15,7 +15,7 @@ layout: default
 <section class="project-gallery grid centered capped-width">
   <!-- top three -->
   <a class="col-one-third padded-05" href="{{page.left-photo-link}}" data-fancybox="gallery">
-    <div style="background-image:url({{page.left-photo}})" class="bg-image-portfolio one-third"></div>
+    <div style="background-image:url({{page.left-photo_image}})" class="bg-image-portfolio one-third"></div>
   </a>
 
   <a class="col-one-third padded-05" href="{{page.middle-photo-link}}" data-fancybox="gallery">
