--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -19,39 +19,39 @@ layout: default
   </a>
 
   <a class="col-one-third padded-05" href="{{page.middle-photo-link}}" data-fancybox="gallery">
-    <div style="background-image:url({{page.middle-photo}})" class="bg-image-portfolio one-third"></div>
+    <div style="background-image:url({{page.middle-photo_image}})" class="bg-image-portfolio one-third"></div>
   </a>
 
   <a class="col-one-third padded-05" href="{{page.right-photo-link}}" data-fancybox="gallery">
-    <div style="background-image:url({{page.right-photo}})" class="bg-image-portfolio one-third"></div>
+    <div style="background-image:url({{page.right-photo_image}})" class="bg-image-portfolio one-third"></div>
   </a>
 </section>
 
 <section class="project-gallery grid centered capped-width one-time">
   <!-- big middle -->
   <div class="col-full-width padded-05">
-    <div style="background-image:url({{page.full-image-1}})" class="bg-image-portfolio full-width"></div>
+    <div style="background-image:url({{page.full-1_image}})" class="bg-image-portfolio full-width"></div>
   </div>
   <div class="col-full-width padded-05">
-    <div style="background-image:url({{page.full-image-2}})" class="bg-image-portfolio full-width"></div>
+    <div style="background-image:url({{page.full-2_image}})" class="bg-image-portfolio full-width"></div>
   </div>
   <div class="col-full-width padded-05">
-    <div style="background-image:url({{page.full-image-3}})" class="bg-image-portfolio full-width"></div>
+    <div style="background-image:url({{page.full-3_image}})" class="bg-image-portfolio full-width"></div>
   </div>
   <div class="col-full-width padded-05">
-    <div style="background-image:url({{page.full-image-4}})" class="bg-image-portfolio full-width"></div>
+    <div style="background-image:url({{page.full-4_image}})" class="bg-image-portfolio full-width"></div>
   </div>
   <div class="col-full-width padded-05">
-    <div style="background-image:url({{page.full-image-5}})" class="bg-image-portfolio full-width"></div>
+    <div style="background-image:url({{page.full-5_image}})" class="bg-image-portfolio full-width"></div>
   </div>
   <div class="col-full-width padded-05">
-    <div style="background-image:url({{page.full-image-6}})" class="bg-image-portfolio full-width"></div>
+    <div style="background-image:url({{page.full-6_image}})" class="bg-image-portfolio full-width"></div>
   </div>
   <div class="col-full-width padded-05">
-    <div style="background-image:url({{page.full-image-7}})" class="bg-image-portfolio full-width"></div>
+    <div style="background-image:url({{page.full-7_image}})" class="bg-image-portfolio full-width"></div>
   </div>
   <div class="col-full-width padded-05">
-    <div style="background-image:url({{page.full-image-8}})" class="bg-image-portfolio full-width"></div>
+    <div style="background-image:url({{page.full-8_image}})" class="bg-image-portfolio full-width"></div>
   </div>
 
 </section>
