Updated 2 files via CloudCannon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,15 +61,7 @@
       </a>
     </div>
     <nav class="col-9-middle_sm-hidden right editable">
-      <a href="/#about"> about </a>
-      <a href="/#services"> services </a>
-      <a href="/#story"> our story </a>
-      <!-- <a href="/#team"> our team </a> -->
-      <a href="/#gallery">gallery </a>
-      <a href="/projects"> projects </a>
-      <a href="/contact"> Contact </a>
-      <!-- <a href="/blog"> Blog </a> -->
-      <a href="/investment-center" class="emphasis"> investment center </a>
+      <p><a href="/#about">about </a> <a href="/#services"> services </a> <a href="/#story"> our story </a> <!-- <a href="/#team"> our team </a> --> <a href="/#gallery">gallery </a> <a href="/projects"> projects </a> <a href="/contact"> Contact </a> <!-- <a href="/blog"> Blog </a> --> <a class="emphasis" href="/investment-center"> investment center </a></p>
     </nav>
 
     <div class="col-2-middle padded grid-middle centered fixed desktop-hide">
@@ -82,7 +74,9 @@
         <a class="mob-logo" href="/">
           <img src="/images/vista-logo5.png" alt="vista Enterprise logo logo for construction company in LA, CA" />
         </a>
-        <p class="cross exit right editable">╳</p>
+        <p class="cross exit right editable">
+          ╳
+        </p>
           <a class="exit" href="/#about"> about </a>
           <a class="exit" href="/#services"> services </a>
           <a class="exit" href="/#story"> our story </a>
@@ -104,40 +98,27 @@
     <a class="logo editable" href="/">
       <img src="/images/vista-logo5.png" alt="vista Enterprise logo logo for construction company in LA, CA" />
     </a>
-    <p class="editable"> We are a licensed construction company operating in The USA <br /> CSLB# 784180 </p>
+    <p class="editable">
+      We are a licensed construction company operating in The USA<br />CSLB# 784180
+    </p>
   </div>
 
   <!-- column -->
   <div class="col-3_sm-4_xs-12 padded-1 editable">
-    <h3> Projects </h3>
-    <nav>
-      <a href="/projects"> Recent Projects</a>
-      <a href="/malibu"> Malibu </a>
-      <a href="/barryknoll-drive-3927"> Los Angeles </a>
-        <a href="/beckman-road-3060">Hollywood Hill</a>
-    </nav>
+    <h3>Projects</h3>
+    <nav><a href="/projects">Recent Projects</a> <a href="/malibu"> Malibu </a> <a href="/barryknoll-drive-3927"> Los Angeles </a> <a href="/beckman-road-3060">Hollywood Hill</a></nav>
   </div>
 
   <!-- column -->
   <div class="col-3_sm-4_xs-12 padded-1 editable">
-    <h3> Explore </h3>
-    <nav>
-      <a href="/#services"> Services </a>
-      <a href="/investment-center"> Investment Center </a>
-      <a href="/#story"> Our Story </a>
-      <a href="/#gallery"> Gallery </a>
-    </nav>
+    <h3>Explore</h3>
+    <nav><a href="/#services">Services </a> <a href="/investment-center"> Investment Center </a> <a href="/#story"> Our Story </a> <a href="/#gallery"> Gallery </a></nav>
   </div>
 
   <!-- column -->
   <div class="col-3_sm-4_xs-12 padded-1 editable">
-    <h3> Connect </h3>
-    <nav>
-      <a href="mailto:vistaenterpriseinc@yahoo.com"> vistaenterpriseinc@yahoo.com</a>
-      <a href="/contact#map"> 3169 Kirkham Drive, Glendale CA 91206 </a>
-      <a href="tel:+18187907437"> +1 818 790 7437 </a>
-      <a href="tel:+3234221916"> +1 323 422 1916</a>
-    </nav>
+    <h3>Connect</h3>
+    <nav><a href="mailto:vistaenterpriseinc@yahoo.com">vistaenterpriseinc@yahoo.com</a> <a href="/contact#map"> 3169 Kirkham Drive, Glendale CA 91206 </a> <a href="tel:+18187907437"> +1 818 790 7437 </a> <a href="tel:+3234221916"> +1 323 422 1916</a></nav>
   </div>
 </footer>
 <div class="col-12 centered sub-footer">
