Updated 2 files via CloudCannon

--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -5,10 +5,14 @@ layout: default
 <section class="grid-center light-bg photography-page capped-width padded-top">
   <div class="grid-center padded-top-projects ">
       <div class="col-12 centered padded-05">
-        <h1 class="editable">{{page.location}}</h1>
+        <h1 class="editable">
+          Los Angeles, CA
+        </h1>
       </div>
       <div class="col-12_xs-12 padded-05 centered">
-        <h4 class="centered padded-top editable"> {{page.project-name}}</h4>
+        <h4 class="centered padded-top editable">
+          3060 Beckman Road
+        </h4>
       </div>
   </div>
 </section>
