Updated 3 files via CloudCannon

--- a/_layouts/investment-project.html
+++ b/_layouts/investment-project.html
@@ -4,14 +4,16 @@ layout: default
 
 <section class="banner grid-center" style="background-image:url({{page.banner_image}}">
   <div class="col-8-middle centered">
-    <h1 class="big-bold editable"> {{page.heading}} </h1>
-    <a href="{{page.button-link}}" class= "button-solid editable"> {{page.button}}</a>
+    <h1 class="big-bold editable">
+      Recent Completed Projects
+    </h1>
+    <a href="/projects#projects" class="button-solid editable"> View projects</a>
   </div>
 </section>
 
 {{content}}
 
-  <section id="projects"class="padded centered">
+  <section id="projects" class="padded centered">
     <div class="grid padded-1">
       <div class="col-4_sm-6 padded-1">
         <a href="{{page.link-1}}">
@@ -85,4 +87,4 @@ layout: default
           </div>
         </a>
       </div>
-  </section>
+  </div></section>
