--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -118,7 +118,9 @@
   <!-- column -->
   <div class="col-3_sm-4_xs-12 padded-1 editable">
     <h3>Connect</h3>
-    <nav><a href="mailto:vistaenterpriseinc@yahoo.com">vistaenterpriseinc@yahoo.com</a> <a href="/contact/">59 Glenflow Ct. Glendale CA,91206</a><br /><a href="tel:+18187907437">+1 818 790 7437 </a> <a href="tel:+3234221916"> +1 323 422 1916</a></nav>
+    <nav><a href="mailto:vistaenterpriseinc@yahoo.com">vistaenterpriseinc@yahoo.com</a>
+      <p><a href="/contact/#map">59 Glenflow Ct. Glendale CA,91206</a><a href="tel:+18187907437">+1 818 790 7437 </a> <a href="tel:+3234221916"> +1 323 422 1916</a></p>
+    </nav>
   </div>
 </footer>
 <div class="col-12 centered sub-footer">
