--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -11,7 +11,7 @@ layout: default
       </div>
       <div class="col-12_xs-12 padded-05 centered">
         <h4 class="centered padded-top editable">
-          3060 Beckman Road
+          2210 Ridge Drive
         </h4>
       </div>
   </div>
